<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:id="@+id/layout"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textColorHint="#FFFFFF">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_inputName"
                android:textColor="#FFFFFF"
                android:hint="@string/hint_bookstore_name"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_address"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_below="@id/et_inputName"
            android:textColorHint="#FFFFFF">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_inputAddress"
                android:textColor="#FFFFFF"
                android:hint="@string/hint_bookstore_address"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_telephone"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_below="@id/et_inputAddress"
            android:textColorHint="#FFFFFF">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:id="@+id/et_inputTelephone"
                android:hint="@string/hint_bookstore_telephone"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_below="@id/et_inputTelephone"
            android:textColorHint="#FFFFFF">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:id="@+id/et_inputEmail"
                android:hint="@string/hint_bookstore_email"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_overview"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_below="@id/et_inputEmail"
            android:textColorHint="#FFFFFF">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:id="@+id/et_inputOverview"
                android:hint="@string/hint_bookstore_overview"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_posterLink"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_below="@id/et_inputOverview"
            android:textColorHint="#FFFFFF">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:id="@+id/et_inputPosterLink"
                android:hint="@string/hint_bookstore_posterLink"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_bigPosterLink"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_below="@id/et_inputPosterLink"
            android:textColorHint="#FFFFFF">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_inputBigPosterLink"
                android:textColor="#FFFFFF"
                android:hint="@string/hint_bookstore_bigPosterLink"/>
        </android.support.design.widget.TextInputLayout>

        <com.example.honghanh.bookstoremanager.views.MyButton
            android:id="@+id/mybtn_insertData"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:text="INSERT NEW BOOKSTORE"
            android:layout_below="@id/et_inputBigPosterLink"
            tools:layout_constraintTop_creator="1"
            tools:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent" />

    </LinearLayout>
   </ScrollView>




</RelativeLayout>